Squash footer bugs.

--- a/style.css
+++ b/style.css
@@ -726,12 +726,12 @@ div.posts-view-pagination .nav-links {
 
 /* Footer */
 
-.footer {
+/* .footer {
 	position: absolute;
 	bottom: 0;
 	width: 100%;
 	margin-top: 30px;
-}
+} */
 
 /* Front Page */
 
